# SimpleMLModel

./: CMakeLists.txt  LICENSE  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
include/: data.h  data_handler.h
src/: Application.cpp  Application.h  UI.cpp  UI.h  data.cpp  data_handler.cpp
